--- a/SmartTaskProcessor.csproj
+++ b/SmartTaskProcessor.csproj
@@ -2,8 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <RepositoryUrl>https://github.com/khamzakhamzakhamza/SmartTasksProcessor</RepositoryUrl>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageId>SmartTasksProcessor</PackageId>
+    <Authors>khamzakhamzakhamza</Authors>
+    <Version>1.0.0</Version>
+    <PackageDescription>Helps with processing a large number of tasks</PackageDescription>
   </PropertyGroup>
 
 </Project>
